sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:8: error: not found: value test
    test = true
    ^AlgCocktailSort3:20: error: not found: value test
        test = false
        ^